force-app/main/default/objects/Governance_Case__c/Governance_Case__c.object-meta.xml
<CustomObject>
    <label>Governance Case</label>
    <nameField>
        <displayFormat>GC-{00000}</displayFormat>
        <label>Governance Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Governance Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>