force-app/main/default/objects/Governance_Case__c/fields/Activation_Block_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Activation_Block_Reasons__c</fullName>
    <description>Serialized activation block reasons from the Data Cloud review queue.</description>
    <inlineHelpText>Read-only JSON array of machine-readable reasons that block direct activation.</inlineHelpText>
    <label>Activation Block Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>