force-app/main/default/objects/Governance_Case__c/fields/Attribute_Validity_Payload__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Validity_Payload__c</fullName>
    <description>Serialized side-by-side field trust payload used for stewardship review.</description>
    <inlineHelpText>Payload containing compared attribute values, validity scores, and explanations.</inlineHelpText>
    <label>Attribute Validity Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>