force-app/main/default/objects/Governance_Case__c/fields/Audit_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Event_Id__c</fullName>
    <description>Correlation key for audit and downstream event tracking.</description>
    <inlineHelpText>Audit correlation identifier for the governance decision.</inlineHelpText>
    <label>Audit Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>