force-app/main/default/objects/Governance_Case__c/fields/Candidate_Pair_Id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Pair_Id__c</fullName>
    <description>Stable stewardship pair key delivered from Pulse360 evidence.</description>
    <inlineHelpText>Stable candidate pair identifier used to join stewardship evidence.</inlineHelpText>
    <label>Candidate Pair Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>