force-app/main/default/objects/Governance_Case__c/fields/Confidence_Band__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Band__c</fullName>
    <description>Human-readable confidence band for duplicate review.</description>
    <inlineHelpText>High, Medium, or Low confidence band from Pulse360.</inlineHelpText>
    <label>Confidence Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>true</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>