force-app/main/default/objects/Governance_Case__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country code for the CSP smart-city target entity.</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>