force-app/main/default/objects/Governance_Case__c/fields/Data_Cloud_Review_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Review_Queue_Id__c</fullName>
    <description>Data Cloud review queue ID used to fetch direct review evidence.</description>
    <inlineHelpText>Matches review_queue_id__c on Pulse360_Activation_Review_Queue__dlm.</inlineHelpText>
    <label>Data Cloud Review Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>