force-app/main/default/objects/Governance_Case__c/fields/Data_Cloud_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Source_Record_Id__c</fullName>
    <description>Databricks source record ID used to fetch direct Data Cloud review evidence.</description>
    <inlineHelpText>Matches source_record_id__c on Pulse360_Activation_Review_Queue__dlm.</inlineHelpText>
    <label>Data Cloud Source Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>