force-app/main/default/objects/Governance_Case__c/fields/Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Decided_At__c</fullName>
    <description>Timestamp of the final governance decision.</description>
    <inlineHelpText>When the steward finalized the current decision.</inlineHelpText>
    <label>Decided At</label>
    <type>DateTime</type>
</CustomField>