force-app/main/default/objects/Governance_Case__c/fields/Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Decided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who finalized the stewardship decision.</description>
    <inlineHelpText>Decision maker for the governance case.</inlineHelpText>
    <label>Decided By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Decided Governance Cases</relationshipLabel>
    <relationshipName>DecidedGovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>