force-app/main/default/objects/Governance_Case__c/fields/Decision_Owner__c.field-meta.xml
<CustomField>
    <fullName>Decision_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned steward responsible for the governance case.</description>
    <inlineHelpText>Assigned owner for stewardship review.</inlineHelpText>
    <label>Decision Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Governance Cases</relationshipLabel>
    <relationshipName>GovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>