force-app/main/default/objects/Governance_Case__c/fields/Decision_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason_Text__c</fullName>
    <description>Optional steward free-text note for the governance decision.</description>
    <inlineHelpText>Optional note recorded by the steward.</inlineHelpText>
    <label>Decision Reason Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>