force-app/main/default/objects/Governance_Case__c/fields/Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status__c</fullName>
    <description>Final governed outcome for the stewardship case.</description>
    <inlineHelpText>Final decision taken by the steward.</inlineHelpText>
    <label>Decision Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Deferred</fullName><default>false</default><label>Deferred</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>