force-app/main/default/objects/Governance_Case__c/fields/Downstream_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Update_Status__c</fullName>
    <description>Status of downstream update execution after the governance decision.</description>
    <inlineHelpText>Status of post-decision truth update and recompute processing.</inlineHelpText>
    <label>Downstream Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Queued</fullName><default>false</default><label>Queued</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>