force-app/main/default/objects/Governance_Case__c/fields/Duplicate_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Confidence__c</fullName>
    <description>Pulse360 duplicate confidence shown to the steward.</description>
    <inlineHelpText>Confidence score from Databricks stewardship evidence.</inlineHelpText>
    <label>Duplicate Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>