force-app/main/default/objects/Governance_Case__c/fields/Evidence_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Run_Id__c</fullName>
    <description>Databricks evidence run identifier for the stewardship package.</description>
    <inlineHelpText>Evidence run used to populate the current governance case.</inlineHelpText>
    <label>Evidence Run Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>