force-app/main/default/objects/Governance_Case__c/fields/Evidence_Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Run_Timestamp__c</fullName>
    <description>Timestamp of the Databricks run that produced the evidence.</description>
    <inlineHelpText>Visible freshness timestamp for the stewardship evidence.</inlineHelpText>
    <label>Evidence Run Timestamp</label>
    <type>DateTime</type>
</CustomField>