force-app/main/default/objects/Governance_Case__c/fields/Feature_Explanations__c.field-meta.xml
<CustomField>
    <fullName>Feature_Explanations__c</fullName>
    <description>Serialized human-readable explanations for the duplicate evidence.</description>
    <inlineHelpText>Explanation payload for why Pulse360 flagged the pair.</inlineHelpText>
    <label>Feature Explanations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>