force-app/main/default/objects/Governance_Case__c/fields/Hierarchy_Conflict_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Conflict_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates hierarchy inconsistency risk for the reviewed pair.</description>
    <inlineHelpText>True when the duplicate decision has hierarchy conflict implications.</inlineHelpText>
    <label>Hierarchy Conflict Flag</label>
    <type>Checkbox</type>
</CustomField>