force-app/main/default/objects/Governance_Case__c/fields/Hierarchy_Impact_Summary__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Impact_Summary__c</fullName>
    <description>Plain-language hierarchy consequence of the duplicate decision.</description>
    <inlineHelpText>Summary of likely hierarchy impact if the steward approves the match.</inlineHelpText>
    <label>Hierarchy Impact Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>