force-app/main/default/objects/Governance_Case__c/fields/Left_Account__c.field-meta.xml
<CustomField>
    <fullName>Left_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Left-side Account under duplicate review.</description>
    <inlineHelpText>Primary left Account record under review.</inlineHelpText>
    <label>Left Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Left Governance Cases</relationshipLabel>
    <relationshipName>LeftGovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>