force-app/main/default/objects/Governance_Case__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market for the CSP smart-city target entity.</description>
    <label>Market</label>
    <length>80</length>
    <type>Text</type>
</CustomField>