force-app/main/default/objects/Governance_Case__c/fields/Merge_Executed_At__c.field-meta.xml
<CustomField>
    <fullName>Merge_Executed_At__c</fullName>
    <description>Timestamp when the Salesforce merge transaction was executed.</description>
    <inlineHelpText>Set when the merge operation completes or fails.</inlineHelpText>
    <label>Merge Executed At</label>
    <type>DateTime</type>
</CustomField>