force-app/main/default/objects/Governance_Case__c/fields/Merge_Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Merge_Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who executed or attempted the Salesforce account merge transaction.</description>
    <inlineHelpText>Used for merge audit and operational troubleshooting.</inlineHelpText>
    <label>Merge Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Merge Executed Governance Cases</relationshipLabel>
    <relationshipName>MergeExecutedGovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>