force-app/main/default/objects/Governance_Case__c/fields/Merge_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Merge_Execution_Status__c</fullName>
    <description>Status of the Salesforce account merge transaction associated with this governance case.</description>
    <inlineHelpText>Tracks whether the approved merge has been prepared, executed, or failed.</inlineHelpText>
    <label>Merge Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Ready for Merge</fullName><default>false</default><label>Ready for Merge</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Skipped</fullName><default>false</default><label>Skipped</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>