force-app/main/default/objects/Governance_Case__c/fields/Merged_Account__c.field-meta.xml
<CustomField>
    <fullName>Merged_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account selected to be merged into the surviving account when the stewardship decision is executed.</description>
    <inlineHelpText>Represents the losing account in the Salesforce merge transaction.</inlineHelpText>
    <label>Merged Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merged Governance Cases</relationshipLabel>
    <relationshipName>MergedGovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>