force-app/main/default/objects/Governance_Case__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <description>Version of the evidence logic or model used to produce the case payload.</description>
    <inlineHelpText>Version of the model or rules used to create the stewardship evidence.</inlineHelpText>
    <label>Model Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>