force-app/main/default/objects/Governance_Case__c/fields/Offer_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Offer_Bundle__c</fullName>
    <description>Human-readable CSP smart-city offer bundle under review.</description>
    <label>Offer Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>