force-app/main/default/objects/Governance_Case__c/fields/Offering_Family__c.field-meta.xml
<CustomField>
    <fullName>Offering_Family__c</fullName>
    <description>CSP smart-city offering family under review.</description>
    <inlineHelpText>Examples include intelligent_parking, urban_data_brokerage, and connected_city_iot_platform.</inlineHelpText>
    <label>Offering Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>