force-app/main/default/objects/Governance_Case__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>Pulse360 recommended action for the duplicate case.</description>
    <inlineHelpText>Recommendation derived from stewardship evidence.</inlineHelpText>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approve Merge</fullName><default>false</default><label>Approve Merge</label></value>
            <value><fullName>Review</fullName><default>true</default><label>Review</label></value>
            <value><fullName>Reject Match</fullName><default>false</default><label>Reject Match</label></value>
            <value><fullName>Map Account</fullName><default>false</default><label>Map Account</label></value>
            <value><fullName>Qualify Proposition</fullName><default>false</default><label>Qualify Proposition</label></value>
            <value><fullName>Governance Review</fullName><default>false</default><label>Governance Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>