force-app/main/default/objects/Governance_Case__c/fields/Recommended_Next_Actions__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Next_Actions__c</fullName>
    <description>Serialized recommended next actions from the CSP smart-city Data Cloud review row.</description>
    <inlineHelpText>Read-only JSON array of action guidance that the steward can accept, reject, or defer.</inlineHelpText>
    <label>Recommended Next Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>