force-app/main/default/objects/Governance_Case__c/fields/Review_Flag__c.field-meta.xml
<CustomField>
    <fullName>Review_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that manual stewardship review is required.</description>
    <inlineHelpText>True when the candidate pair requires manual review.</inlineHelpText>
    <label>Review Flag</label>
    <type>Checkbox</type>
</CustomField>