force-app/main/default/objects/Governance_Case__c/fields/Review_Followup_Required__c.field-meta.xml
<CustomField>
    <fullName>Review_Followup_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether follow-up work is required after the decision.</description>
    <inlineHelpText>True when additional follow-up remains after the current decision.</inlineHelpText>
    <label>Review Followup Required</label>
    <type>Checkbox</type>
</CustomField>