force-app/main/default/objects/Governance_Case__c/fields/Review_Priority__c.field-meta.xml
<CustomField>
    <fullName>Review_Priority__c</fullName>
    <description>Action routing priority from the CSP smart-city Data Cloud review row.</description>
    <inlineHelpText>Examples include activation_candidate, account_mapping_review, governance_review, and evidence_build_required.</inlineHelpText>
    <label>Review Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>