force-app/main/default/objects/Governance_Case__c/fields/Right_Account__c.field-meta.xml
<CustomField>
    <fullName>Right_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Right-side Account under duplicate review.</description>
    <inlineHelpText>Primary right Account record under review.</inlineHelpText>
    <label>Right Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Right Governance Cases</relationshipLabel>
    <relationshipName>RightGovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>