force-app/main/default/objects/Governance_Case__c/fields/Source_Product__c.field-meta.xml
<CustomField>
    <fullName>Source_Product__c</fullName>
    <description>Databricks/Data Cloud source product that produced the governance review row.</description>
    <inlineHelpText>Identifies whether this case came from duplicate matching, firmographic enrichment, CSP smart-city readiness, or another governed source product.</inlineHelpText>
    <label>Source Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>