force-app/main/default/objects/Governance_Case__c/fields/Source_Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Snapshot_Id__c</fullName>
    <description>Replay-safe source snapshot identifier for the evidence package.</description>
    <inlineHelpText>Source snapshot that produced the stewardship evidence.</inlineHelpText>
    <label>Source Snapshot Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>