force-app/main/default/objects/Governance_Case__c/fields/Surviving_Account__c.field-meta.xml
<CustomField>
    <fullName>Surviving_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account selected as the surviving record when an approval is made.</description>
    <inlineHelpText>Required when the decision is Approved.</inlineHelpText>
    <label>Surviving Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surviving Governance Cases</relationshipLabel>
    <relationshipName>SurvivingGovernanceCases</relationshipName>
    <type>Lookup</type>
</CustomField>