force-app/main/default/objects/Governance_Case__c/fields/Target_B2B_Customer_Ids__c.field-meta.xml
<CustomField>
    <fullName>Target_B2B_Customer_Ids__c</fullName>
    <description>Serialized B2B target-customer IDs from the CSP smart-city review row.</description>
    <inlineHelpText>Read-only JSON array copied from Data Cloud evidence for steward review.</inlineHelpText>
    <label>Target B2B Customer Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>