force-app/main/default/objects/Governance_Case__c/fields/Target_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Entity_Name__c</fullName>
    <description>CSP smart-city target entity name from Data Cloud.</description>
    <inlineHelpText>City, agency, locality, or operating target for the smart-city proposition.</inlineHelpText>
    <label>Target Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>