force-app/main/default/objects/Governance_Case__c/fields/Top_Match_Features__c.field-meta.xml
<CustomField>
    <fullName>Top_Match_Features__c</fullName>
    <description>Serialized top match features used in stewardship review.</description>
    <inlineHelpText>Evidence payload describing the strongest duplicate features.</inlineHelpText>
    <label>Top Match Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>