force-app/main/default/objects/Governance_Case__c/validationRules/Require_Reason_On_Final_Decision.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_On_Final_Decision</fullName>
    <active>true</active>
    <description>Requires a structured decision reason whenever a stewardship case is moved into a final decision state.</description>
    <errorConditionFormula>
        OR(
            ISPICKVAL(Decision_Status__c, "Approved"),
            ISPICKVAL(Decision_Status__c, "Rejected"),
            ISPICKVAL(Decision_Status__c, "Deferred"),
            ISPICKVAL(Status__c, "Approved"),
            ISPICKVAL(Status__c, "Rejected"),
            ISPICKVAL(Status__c, "Deferred")
        )
        &amp;&amp;
        ISBLANK(TEXT(Decision_Reason_Code__c))
    </errorConditionFormula>
    <errorDisplayField>Decision_Reason_Code__c</errorDisplayField>
    <errorMessage>Select a decision reason code before saving an approved, rejected, or deferred governance case.</errorMessage>
</ValidationRule>