force-app/main/default/objects/Governance_Case__c/validationRules/Require_Surviving_Account_From_Case_Pair.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Surviving_Account_From_Case_Pair</fullName>
    <active>true</active>
    <description>Prevents approving a governance case with a surviving account that is not one of the two reviewed case accounts.</description>
    <errorConditionFormula>
        ISPICKVAL(Decision_Status__c, "Approved")
        &amp;&amp;
        ISPICKVAL(Recommended_Action__c, "Approve Merge")
        &amp;&amp;
        NOT(
            OR(
                Surviving_Account__c = Left_Account__c,
                Surviving_Account__c = Right_Account__c
            )
        )
    </errorConditionFormula>
    <errorDisplayField>Surviving_Account__c</errorDisplayField>
    <errorMessage>Select one of the two reviewed Accounts as the surviving Account.</errorMessage>
</ValidationRule>