force-app/main/default/objects/Governance_Case__c/validationRules/Require_Surviving_Account_On_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Surviving_Account_On_Approval</fullName>
    <active>true</active>
    <description>Requires the steward to select the surviving account before approving a merge case.</description>
    <errorConditionFormula>
        OR(
            ISPICKVAL(Decision_Status__c, "Approved"),
            ISPICKVAL(Status__c, "Approved")
        )
        &amp;&amp;
        ISPICKVAL(Recommended_Action__c, "Approve Merge")
        &amp;&amp;
        ISBLANK(Surviving_Account__c)
    </errorConditionFormula>
    <errorDisplayField>Surviving_Account__c</errorDisplayField>
    <errorMessage>Select the surviving account before approving this governance case.</errorMessage>
</ValidationRule>